# sonar_detectors

./: CMakeLists.txt  manifest.xml  sonar_display.rb
resources/: avalon.osg
scripts/: replay_log.rb  sonarbeam_plot.rb  sonarbeam_replay_live.rb
src/: CMakeLists.txt  CenterWallEstimation.cpp  CenterWallEstimation.hpp  DistanceEstimation.cpp  DistanceEstimation.hpp  FeatureExtraction.cpp  FeatureExtraction.hpp  MWallEstimation.cpp  MWallEstimation.hpp  PointClustering.cpp  PointClustering.hpp  RansacWallEstimation.cpp  RansacWallEstimation.hpp  SonarBeamProcessing.cpp  SonarBeamProcessing.hpp  SonarDepthMap.hpp  SonarDetectorMath.cpp  SonarDetectorMath.hpp  SonarDetectorTypes.hpp  SonarEnvironmentModel.cpp  SonarEnvironmentModel.hpp  SonarEstimation.hpp  SonarMap.hpp  SonarWallMap.hpp  StructureEstimation.cpp  StructureEstimation.hpp  WallAngleEstimation.cpp  WallAngleEstimation.hpp  WallAngleEstimationCandidate.hpp  WallEstimation.cpp  WallEstimation.hpp
viz/: AUVAvalonVisualization.cpp  AUVAvalonVisualization.hpp  CMakeLists.txt  PluginLoader.cpp  SonarBeamVisualization.cpp  SonarBeamVisualization.hpp  SonarDepthMapVisualization.cpp  SonarDepthMapVisualization.hpp  SonarDepthVisualization.cpp  SonarDepthVisualization.hpp  SonarDetectorVisualization.cpp  SonarDetectorVisualization.hpp  SonarFeatureVisualization.cpp  SonarFeatureVisualization.hpp  SonarObstaclesVisualization.cpp  SonarObstaclesVisualization.hpp  WallVisualization.cpp  WallVisualization.hpp  sonar_detectors-viz.pc.in  sonarbeam-viz.pc.in  vizkit_plugin.rb
